--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,48 +8,426 @@
     android:textAlignment="center"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/Profiles"
-        android:layout_width="251dp"
-        android:layout_height="172dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#000"
-        android:drawableTop="@mipmap/plant2"
-        android:drawablePadding="-20dip"
-        android:gravity="center"
-        android:onClick="OpenProfiles"
-        android:padding="40dip"
-        android:text="Profiles"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Temp"
-        app:layout_constraintLeft_toLeftOf="@+id/Temp"
-        app:layout_constraintRight_toRightOf="@+id/Temp"
+    <ImageView
+        android:id="@+id/clover"
+        android:layout_marginEnd="220dp"
+        android:layout_marginRight="220dp"
+        android:elevation="6dp"
+        android:src="@drawable/clover"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.848" />
+        />
 
-    <Button
-        android:id="@+id/Temp"
-        android:layout_width="162dp"
-        android:layout_height="166dp"
-        android:layout_marginBottom="77dp"
-        android:layout_marginLeft="8dp"
+    <LinearLayout
+        android:id="@+id/texthome"
+        android:elevation="6dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Catastrophe"
+            android:textColor="#FFF"
+            android:textSize="24sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Smart Irrigation System"
+            android:textColor="#FFF"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <!--Middle text-->
+
+    <LinearLayout
+        android:id="@+id/textsplash"
+        android:elevation="6dp"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="8dp"
-        android:background="#000"
-        android:drawablePadding="-20dip"
-        android:drawableTop="@mipmap/camera"
-        android:gravity="center"
-        android:padding="40dip"
-        android:text="Add Plant"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="268dp" />
+        android:layout_marginLeft="70dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome Back"
+            android:textColor="#FFF"
+            android:textSize="40sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Not a member ? Sign up first."
+            android:textColor="#FFF"
+            android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <!--Home Screen Icons-->
+
+    <!--<LinearLayout-->
+        <!--android:id="@+id/menus"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginTop="300dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:elevation="6dp"-->
+        <!--android:orientation="vertical"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_marginRight="0dp"-->
+            <!--android:layout_marginLeft="50dp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="50dp"-->
+                <!--android:gravity="center"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="4dp"-->
+                    <!--android:src="@drawable/biton_1" />-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="bitcoin"-->
+                    <!--android:textColor="#0E1843"-->
+                    <!--android:textSize="16sp" />-->
+
+            <!--</LinearLayout>-->
+
+            <!--<LinearLayout-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_marginRight="50dp"-->
+                <!--android:gravity="center"-->
+                <!--android:orientation="vertical">-->
+
+                <!--<ImageView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="4dp"-->
+                    <!--android:src="@drawable/biton_1" />-->
+
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="bitcoin"-->
+                    <!--android:textColor="#0E1843"-->
+                    <!--android:textSize="16sp" />-->
+
+            <!--</LinearLayout>-->
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
+
+    <LinearLayout
+        android:id="@+id/login_signup_form"
+        android:elevation="6dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:orientation="vertical"
+        android:paddingLeft="24dp"
+        android:paddingTop="10dp"
+        android:paddingRight="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="0.0dp">
+
+            <Button
+                android:id="@+id/logintab"
+                style="?android:buttonBarButtonStyle"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="0dp"
+                android:layout_marginRight="0dp"
+                android:background="#11FF0000"
+                android:focusable="true"
+                android:onClick="Login_tab"
+                android:text="Login"
+                android:textColor="#29AB87"
+                android:textIsSelectable="false"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toStartOf="@+id/signuptab"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/signuptab"
+                style="?android:buttonBarButtonStyle"
+                android:layout_width="150dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:background="#11FF0000"
+                android:onClick="Signup_tab"
+                android:text="Sign up"
+                android:textColor="#29AB87"
+                android:textIsSelectable="false"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/logintab"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:background="#11FF0000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="-24dp"
+            android:paddingHorizontal="40dp"
+            android:orientation="vertical">
+
+        <!--Email label-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#29AB87"
+            android:textSize="24sp"
+            android:text="Email"/>
+
+        <EditText
+            android:id="@+id/input_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:backgroundTint="#29AB87"/>
+
+
+        <!-- Password Label -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:textColor="#29AB87"
+            android:textSize="24sp"
+            android:text="Password" />
+
+        <EditText
+            android:id="@+id/input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:backgroundTint="#29AB87"/>
+
+
+            <Button
+                android:id="@+id/btn_login"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:background="#29AB87"
+                android:onClick="Login"
+                android:padding="12dp"
+                android:text="Login" />
+
+            <Button
+                android:id="@+id/btn_signup"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:background="#29AB87"
+                android:onClick="SignUp"
+                android:padding="12dp"
+                android:text="Sign Up" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+    <!--<LinearLayout-->
+        <!--android:elevation="6dp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginTop="180dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:orientation="vertical"-->
+        <!--android:paddingLeft="24dp"-->
+        <!--android:paddingTop="56dp"-->
+        <!--android:paddingRight="24dp"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent">-->
+
+        <!--<Button-->
+            <!--android:id="@+id/loginbutton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginEnd="8dp"-->
+            <!--android:layout_marginRight="8dp"-->
+            <!--android:layout_marginStart="80dp"-->
+            <!--android:layout_marginLeft="80dp"-->
+            <!--android:text="Login"-->
+            <!--android:textIsSelectable="false"-->
+            <!--android:textColor="#FFF"-->
+            <!--android:textSize="24sp"-->
+            <!--android:focusable="true"-->
+            <!--android:background="?android:selectableItemBackground"-->
+            <!--app:layout_constraintEnd_toStartOf="@+id/signupbutton"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--android:layout_marginBottom="100dp"-->
+            <!--/>-->
+
+        <!--<Button-->
+            <!--android:id="@+id/signupbutton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginStart="8dp"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_marginEnd="30dp"-->
+            <!--android:layout_marginRight="30dp"-->
+            <!--android:text="Sign up"-->
+            <!--android:textIsSelectable="false"-->
+            <!--android:textColor="#FFF"-->
+            <!--android:textSize="24sp"-->
+            <!--android:background="?android:selectableItemBackground"-->
+            <!--app:layout_constraintStart_toEndOf="@+id/loginbutton"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--/>-->
+
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:translationY="50dp"-->
+            <!--android:translationX="-270dp"-->
+
+            <!--android:gravity="center"-->
+            <!--android:orientation="horizontal">-->
+            <!--<TextView-->
+                <!--android:text="email"-->
+                <!--android:textColor="#FFF"-->
+                <!--android:textSize="20sp"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--/>-->
+        <!--</LinearLayout>-->
+
+        <!--<TextView-->
+            <!--android:text="password"-->
+            <!--android:textColor="#FFF"-->
+            <!--android:textSize="20sp"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+
+        <!--<EditText-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
+    <!--</LinearLayout>-->
+
+    <ImageView
+        android:id="@+id/bgapp"
+        android:scaleType="fitXY"
+        android:src="@drawable/bgapp"
+        android:layout_width="500dp"
+        android:layout_height="900dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:translationY="-200dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <!--Old Buttons-->
+
+    <!--<Button-->
+        <!--android:id="@+id/Profiles"-->
+        <!--android:layout_width="251dp"-->
+        <!--android:layout_height="172dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:background="#000"-->
+        <!--android:drawableTop="@mipmap/plant2"-->
+        <!--android:drawablePadding="-20dip"-->
+        <!--android:gravity="center"-->
+        <!--android:onClick="OpenProfiles"-->
+        <!--android:padding="40dip"-->
+        <!--android:text="Profiles"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textStyle="bold"-->
+        <!--app:layout_constraintBottom_toTopOf="@+id/Temp"-->
+        <!--app:layout_constraintLeft_toLeftOf="@+id/Temp"-->
+        <!--app:layout_constraintRight_toRightOf="@+id/Temp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintVertical_bias="0.848" />-->
+
+    <!--<Button-->
+        <!--android:id="@+id/Temp"-->
+        <!--android:layout_width="162dp"-->
+        <!--android:layout_height="166dp"-->
+        <!--android:layout_marginBottom="77dp"-->
+        <!--android:layout_marginLeft="8dp"-->
+        <!--android:layout_marginRight="8dp"-->
+        <!--android:background="#000"-->
+        <!--android:drawablePadding="-20dip"-->
+        <!--android:drawableTop="@mipmap/camera"-->
+        <!--android:gravity="center"-->
+        <!--android:padding="40dip"-->
+        <!--android:text="Add Plant"-->
+        <!--android:textColor="#fff"-->
+        <!--android:textStyle="bold"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintHorizontal_bias="0.51"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--tools:layout_editor_absoluteY="268dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
