--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -283,92 +283,26 @@
         </LinearLayout>
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/test_btn_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="300dp"
+        android:translationX="-100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-
-    <!--<LinearLayout-->
-        <!--android:elevation="6dp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginTop="180dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:orientation="vertical"-->
-        <!--android:paddingLeft="24dp"-->
-        <!--android:paddingTop="56dp"-->
-        <!--android:paddingRight="24dp"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent">-->
-
-        <!--<Button-->
-            <!--android:id="@+id/loginbutton"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:layout_marginRight="8dp"-->
-            <!--android:layout_marginStart="80dp"-->
-            <!--android:layout_marginLeft="80dp"-->
-            <!--android:text="Login"-->
-            <!--android:textIsSelectable="false"-->
-            <!--android:textColor="#FFF"-->
-            <!--android:textSize="24sp"-->
-            <!--android:focusable="true"-->
-            <!--android:background="?android:selectableItemBackground"-->
-            <!--app:layout_constraintEnd_toStartOf="@+id/signupbutton"-->
-            <!--app:layout_constraintStart_toStartOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--android:layout_marginBottom="100dp"-->
-            <!--/>-->
-
-        <!--<Button-->
-            <!--android:id="@+id/signupbutton"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginLeft="8dp"-->
-            <!--android:layout_marginEnd="30dp"-->
-            <!--android:layout_marginRight="30dp"-->
-            <!--android:text="Sign up"-->
-            <!--android:textIsSelectable="false"-->
-            <!--android:textColor="#FFF"-->
-            <!--android:textSize="24sp"-->
-            <!--android:background="?android:selectableItemBackground"-->
-            <!--app:layout_constraintStart_toEndOf="@+id/loginbutton"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintTop_toTopOf="parent"-->
-            <!--/>-->
-
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:translationY="50dp"-->
-            <!--android:translationX="-270dp"-->
-
-            <!--android:gravity="center"-->
-            <!--android:orientation="horizontal">-->
-            <!--<TextView-->
-                <!--android:text="email"-->
-                <!--android:textColor="#FFF"-->
-                <!--android:textSize="20sp"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--/>-->
-        <!--</LinearLayout>-->
-
-        <!--<TextView-->
-            <!--android:text="password"-->
-            <!--android:textColor="#FFF"-->
-            <!--android:textSize="20sp"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
-
-        <!--<EditText-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content" />-->
-    <!--</LinearLayout>-->
+        <ImageView
+            android:id="@+id/profile_pic"
+            android:layout_width="177dp"
+            android:layout_height="116dp"
+            android:background="#00000000"
+            android:onClick="Test_button"
+            android:src="@mipmap/plant_default"
+            android:transitionName="transition_profile_1"/>
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/bgapp"
@@ -382,7 +316,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:transitionName="transition_profile_2"/>
 
     <!--Old Buttons-->
 
