--- a/app/src/main/res/layout/plant_view.xml
+++ b/app/src/main/res/layout/plant_view.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <ImageView
+        android:alpha="0.8"
         android:id="@+id/delete_plant"
         android:onClick="Delete_plant"
         android:layout_width="52dp"
@@ -110,14 +111,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="8dp"
-                android:paddingLeft="16dp"
-                android:background="@drawable/ic_water_bar"
+                android:background="@drawable/ic_water_bar_adjusted"
                 android:gravity="start"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingLeft="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -143,7 +144,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="87dp"
                 android:layout_height="67dp"
                 android:paddingRight="-24dp"
@@ -151,12 +152,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="16dp"
-                android:background="@drawable/ic_acid_bar"
+                android:background="@drawable/ic_acid_bar_adjusted"
                 android:gravity="start"
                 android:orientation="vertical">
 
@@ -184,7 +185,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_width="87dp"
                 android:layout_height="67dp"
                 android:paddingRight="-24dp"
@@ -192,12 +193,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="64dp"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:paddingLeft="16dp"
-                android:background="@drawable/ic_heat_bar"
+                android:background="@drawable/ic_heat_bar_adjusted"
                 android:gravity="start"
                 android:orientation="vertical">
 
