--- a/app/src/main/res/layout/profiles_view.xml
+++ b/app/src/main/res/layout/profiles_view.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Unused layout file-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,14 +7,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ListView
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:id="@+id/list_of_plants"
-        android:transcriptMode="alwaysScroll"
-        android:divider="@android:color/transparent"
-        tools:layout_editor_absoluteX="8dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
-    
+    <!--<ListView-->
+        <!--android:layout_width="368dp"-->
+        <!--android:layout_height="495dp"-->
+        <!--android:id="@+id/list_of_plants"-->
+        <!--android:transcriptMode="alwaysScroll"-->
+        <!--android:divider="@android:color/transparent"-->
+        <!--tools:layout_editor_absoluteX="8dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--android:layout_marginTop="8dp" />-->
+    <!---->
 </androidx.constraintlayout.widget.ConstraintLayout>
